--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+  <script type="text/javascript">
+    var Laravel = {
+      // 设置 csrfToken
+      csrfToken: '{{ csrf_token() }}'
+    };
+  </script>
 </head>
 <!--
 BODY TAG OPTIONS:
