--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ desired effect
 <!-- AdminLTE App -->
 <script src="dist/js/app.min.js"></script>
 
-<script src="dist/build.js"></script>
+<script src="http://localhost:8080/dist/build.js"></script>
 
 
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
